# airflow-teams-hook

./: .gitignore  README.md  requirements.txt  setup.cfg
src/airflowTeamsHook/: callbacks.py  hook.py  operator.py
src/airflowTeamsHook.egg-info/: PKG-INFO  SOURCES.txt
src/airflow_teams_hook.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
