[metadata]
name = airflow_teams_hook
version = 0.0.2
author = Philip Brinkmann
author_email = philip.brinkmann@de.sasol.com
description = Custom Webhooks for Airflow Callbacks into MS Teams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
